[gd_scene load_steps=27 format=2]

[ext_resource path="res://player/assets/vignette.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/assets/player.png" type="Texture" id=3]
[ext_resource path="res://player/assets/spokes_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://player/assets/arms_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://player/Graphics.gd" type="Script" id=6]

[sub_resource type="Curve" id=20]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.00817439, 0.254545 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=1]
radius = 54.8282

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.5811, 56.9002 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "spin",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "push_bwd",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 18 ), SubResource( 18 ), SubResource( 18 ), SubResource( 18 ), SubResource( 15 ) ],
"loop": false,
"name": "push_fwd",
"speed": 10.0
} ]

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;
render_mode blend_mul;

uniform vec4 color_tint : hint_color;
uniform sampler2D vignette_tx : hint_albedo;

void fragment() {
	float weight = texture(vignette_tx, SCREEN_UV).x;
	COLOR = color_tint * weight;
	COLOR.a = 1.0;
}"

[sub_resource type="ShaderMaterial" id=22]
shader = SubResource( 21 )
shader_param/color_tint = Color( 0.619608, 0.811765, 0.858824, 1 )
shader_param/vignette_tx = ExtResource( 1 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
wheel_anim_curve = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WheelLeft" type="Area2D" parent="."]
position = Vector2( -34.756, 8.741 )
monitoring = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelLeft"]
shape = SubResource( 2 )

[node name="WheelRight" type="Area2D" parent="."]
position = Vector2( 34.7557, 8.74057 )
monitoring = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelRight"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="Graphics"]
modulate = Color( 0, 0, 0, 0.392157 )
position = Vector2( -6, 0 )
texture = ExtResource( 3 )

[node name="SpokesR" type="AnimatedSprite" parent="Graphics"]
frames = SubResource( 7 )
animation = "spin"

[node name="SpokesL" type="AnimatedSprite" parent="Graphics"]
frames = SubResource( 7 )
animation = "spin"
flip_h = true

[node name="Body" type="Sprite" parent="Graphics"]
texture = ExtResource( 3 )

[node name="ArmR" type="AnimatedSprite" parent="Graphics"]
frames = SubResource( 19 )
animation = "push_bwd"
frame = 3
playing = true

[node name="ArmL" type="AnimatedSprite" parent="Graphics"]
frames = SubResource( 19 )
animation = "push_bwd"
frame = 3
playing = true
flip_h = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 22 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
